# mikroprojekt-4

./: CMakeLists.txt  depricated.txt  main.cpp  result_correct.txt
include/: AStar.h  Board.h  DFS.h  Graph.h  aGwiazdka.h  graf.h  graf_lista.h  lista.h  plansza.h
src/: AStar.cpp  Board.cpp  DFS.cpp  Graph.cpp  aGwiazdka.cpp  graf_lista.cpp  plansza.cpp
